# zebra-tool

./: .gitignore  README.md  pyproject.toml
src/zebra_tool/: __init__.py  __main__.py  export.py  models.py  network.py
src/zebra_tool/discovery/: mdns.py  snmp.py  tcp.py  udp.py
src/zebra_tool/tui/: app.py  detail_screen.py  registry.py
tests/: test_export.py  test_mdns.py  test_models.py  test_network.py  test_snmp.py  test_tcp.py  test_tui.py  test_udp.py
